--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "option-ai-backend",
+  "name": "optionai-backend",
   "version": "1.0.0",
-  "description": "Backend API for Option AI - Options Trading Tool",
-  "main": "server.js",
+  "description": "OptionAI Backend API for Vercel deployment",
+  "main": "api/index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node api/index.js",
+    "dev": "nodemon api/index.js"
   },
   "keywords": ["options", "trading", "api", "express"],
   "author": "",
@@ -19,6 +18,9 @@
     "node-cron": "^3.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
