--- a/vercel.json
+++ b/vercel.json
@@ -16,11 +16,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/api/index.js"
-    },
-    {
-      "src": "/",
-      "dest": "/frontend/dist/index.html"
+      "dest": "/backend/api/index.js"
     },
     {
       "src": "/(.*)",
