--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,12 @@
   "version": 2,
   "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/dist",
-  "functions": {
-    "backend/api/index.js": {
-      "runtime": "nodejs18.x"
+  "builds": [
+    {
+      "src": "backend/api/index.js",
+      "use": "@vercel/node"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
