--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,17 @@
 {
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
-    "installCommand": "cd frontend && npm install"
+    "installCommand": "cd frontend && npm install",
+    "builds": [
+      {
+        "src": "backend/api/index.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "rewrites": [
+      {
+        "source": "/api/(.*)",
+        "destination": "/backend/api/index.js"
+      }
+    ]
   } 
