revert the change

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,5 @@
 {
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
-    "installCommand": "cd frontend && npm install",
-    "builds": [
-      {
-        "src": "backend/api/index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "rewrites": [
-      {
-        "source": "/api/(.*)",
-        "destination": "/backend/api/index.js"
-      }
-    ]
-  } 
+    "installCommand": "cd frontend && npm install"
+} 
